methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:44: error: Unmatched closing brace '}' ignored here
}
^